--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.4",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "node-sass": "^4.14.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-cookie": "^4.1.1",
@@ -46,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.25",
+    "sass": "^1.53.0"
   }
 }
